# slic

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
include/: slic.hpp
tests/: tests.cpp
